--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>
-                      <li><a href="https://brutalbabbage.blogspot.com/" title="services">Facts</a></li>
+                      <li><a href="https://officialwhatthefact.blogspot.com/" title="services">Facts</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
                 </ul>
 
@@ -74,11 +74,9 @@
                         <a href="#"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                    </li>
+                    
                 </ul>
 
             </div> <!-- end header-nav__content -->
@@ -141,11 +139,9 @@
                 <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
+                <a href="#0"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>Youtube</span></a>
             </li>
-            <li>
-                <a href="#0"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
-            </li>
+            
         </ul>
         <!-- end home-social -->
 
