--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>WTF| What the fact</title>
+    <title>WTF | What the fact</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -76,7 +76,7 @@
                     <li>
                         <a href="#"><i class="fa fa-youtube"></i></a>
                     </li>
-                    
+
                 </ul>
 
             </div> <!-- end header-nav__content -->
@@ -93,7 +93,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/wallpaper.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -141,7 +141,7 @@
             <li>
                 <a href="#0"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>Youtube</span></a>
             </li>
-            
+
         </ul>
         <!-- end home-social -->
 
@@ -699,7 +699,7 @@ If you want to talk to us, then you can contact us. You can subscribe your email
             <div class="col-twelve">
                 <div class="copyright">
                     <span>© Copyright WTF 2022</span>
-                    <span>Design with ❤ by WTF  <a href="https://www.colorlib.com/">Tech Team</a></span>
+                    <span>Design with ❤ by WTF  <a href="#">Tech Team</a></span>
                 </div>
 
                 <div class="go-top">
