--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <h5>Average Watchtime</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">15000 </div>
+                <div class="stats__count">15000</div>
                 <h5>Views</h5>
             </div>
             <div class="col-block stats__col">
@@ -557,7 +557,7 @@ We are always updated and try to give to you. Our team works day and night only 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Contact Us</h3>
-                <h1 class="display-2 display-2--light">Reach out for a new project or just say hello</h1>
+                <h1 class="display-2 display-2--light">Reach out for a query or just say hello</h1>
             </div>
         </div>
 
