--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@ We are always updated and try to give to you. Our team works day and night only 
                 </form>
 
                 <!-- contact-warning -->
-                <div class="message-warning">
-                    Something went wrong. Please try again.
+                <div class="message-success">
+                Your message was sent, thank you!
                 </div>
 
                 <!-- contact-success -->
